--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.13",
     "bootstrap": "^5.3.8",
-    "framer-motion": "^12.23.13",
+    "framer-motion": "^12.23.16",
+    "lucide-react": "^0.544.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-hot-toast": "^2.6.0",
     "react-router-dom": "^7.9.1",
     "tailwindcss": "^4.1.13"
   },
