--- a/package.json
+++ b/package.json
@@ -11,12 +11,19 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.13",
+    "@tinymce/tinymce-react": "^6.3.0",
     "bootstrap": "^5.3.8",
+    "draft-js": "^0.11.7",
+    "draftjs-to-html": "^0.9.1",
     "framer-motion": "^12.23.16",
+    "html-to-draftjs": "^1.5.0",
     "lucide-react": "^0.544.0",
+    "quill": "^2.0.3",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-draft-wysiwyg": "^1.15.0",
     "react-hot-toast": "^2.6.0",
+    "react-quill": "^2.0.0",
     "react-router-dom": "^7.9.1",
     "tailwindcss": "^4.1.13"
   },
