--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 VITE_API_URL=https://raulo-backend.vercel.app/api
-VITE_LOCAL_API_URL=http://localhost:3000/api
+# VITE_API_URL=http://localhost:3000/api
