--- a/package.json
+++ b/package.json
@@ -18,15 +18,18 @@
     "draftjs-to-html": "^0.9.1",
     "framer-motion": "^12.23.16",
     "html-to-draftjs": "^1.5.0",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.544.0",
     "quill": "^2.0.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-draft-wysiwyg": "^1.15.0",
     "react-hot-toast": "^2.6.0",
+    "react-icons": "^5.5.0",
     "react-quill": "^2.0.0",
     "react-router-dom": "^7.9.1",
-    "tailwindcss": "^4.1.13"
+    "tailwindcss": "^4.1.13",
+    "turndown": "^7.2.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
